--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevron/wcHelpChevron.directive.scss
@@ -29,7 +29,7 @@
     margin: 0;
     padding: 0 5px;
     background-color: transparent;
-    color: #008391;
+    color: $wc-color-16;
     outline: none;
   }
 }
