--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -20,8 +20,8 @@
 .wc-help-chevron__text {
   display: block;
   border-radius: 4px 4px;
-  background-color: #EFF8F9;
-  color: #004563;
+  background-color: $wc-color-20;
+  color: $wc-color-06;
   margin: 3px 0 10px 0;
   padding: 10px 15px;
   max-height: 13em;
