--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.scss
@@ -1,6 +1,6 @@
 .wc-intyg-patient-namn-personnummer {
   .old-person-id {
-    color: #aaaaaa;
+    color: $wc-color-23;
     display: inline-block;
     padding-left: 10px;
   }
