--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygRelatedOtherIntygMessage/wcIntygRelatedOtherIntygMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygRelatedOtherIntygMessage/wcIntygRelatedOtherIntygMessage.directive.scss
@@ -21,7 +21,7 @@
   > .alert-warning {
     font-weight: bold;
     > .glyphicon-exclamation-sign {
-      color: #f00;
+      color: $wc-color-04;
     }
   }
 
