--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/dodsorsakRow.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/dodsorsakRow.scss
@@ -28,7 +28,7 @@ dodsorsak-row {
 
   .dodsorsak-row__letter {
     font-size: 30px;
-    color: #9B9B9B;
+    color: $wc-color-22;
     position: absolute;
     top: 0;
     left: 0;
