--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss
@@ -24,7 +24,7 @@ uv-boolean-value {
     font-size: 14px;
     padding-top: 15px;
     margin: 0;
-    color: #666;
+    color: $wc-color-09;
   }
 
   .value {
