--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvEnumValue/uvEnumValue.directive.scss
@@ -5,7 +5,7 @@ uv-enum-value {
     font-size: 14px;
     padding-top: 15px;
     margin: 0;
-    color: #666;
+    color: $wc-color-09;
   }
 
   .value {
