--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcFragaKomplettering/wcFragaKomplettering.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcFragaKomplettering/wcFragaKomplettering.directive.scss
@@ -20,7 +20,7 @@
 wc-fraga-komplettering {
 
   .komplettering-active {
-    border: 3px solid #FFC822;
+    border: 3px solid $wc-color-12;
     border-radius: 4px;
     margin-bottom: 1px;
   }
