--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcTableHead/wcTableHead.directive.scss
@@ -1,6 +1,6 @@
 //TODO: Define & use styleguide color values in parent components/_variables.scss file instead of these local variables?
 
-$th-link-color: #333;
+$th-link-color: $wc-color-08;
 
 a.wc-table-head {
   color: $th-link-color;
