--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
@@ -20,11 +20,11 @@
 /**
 Table styles pertaining to Arenden.
  */
-$arende-panel-background-color: #eaeaea;
-$arende-block-border-color: #d8d8d8;
-$arende-block-background-color: #fff;
-$arende-block-handled-background-color: #f5f5f5;
-$arende-block-head-color: #000;
+$arende-panel-background-color: $wc-color-20;
+$arende-block-border-color: $wc-color-13;
+$arende-block-background-color: $wc-color-00;
+$arende-block-handled-background-color: $wc-color-20;
+$arende-block-head-color: $wc-color-07;
 
 /**
 arende list item animation
