--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
@@ -2,7 +2,7 @@
   padding: 20px 30px;
 
   .srs-border {
-    border-right:1px #eee solid;
+    border-right:1px $wc-color-20 solid;
   }
   //Here we can override default webcert styles for uv framework components e.g:
   uv-kategori h2 {
