--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/unified-view.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/unified-view.scss
@@ -17,18 +17,10 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-uv-boolean-statement {
-  display: block;
-
-  h4 {
-    font-size: 14px;
-    padding-top: 15px;
-    margin: 0;
-    color: $wc-color-09;
-  }
-
-  .value {
-    display: inline-block;
-    padding-top: 5px;
-  }
-}
+// Override variables for uv-framework in app-shared with WC specific styling
+$uv-body-bg: $wc-color-20;
+$uv-spinner-color: $wc-color-21;
+$uv-intyg-body-bg: $wc-color-13;
+$uv-box-shadow-color: $wc-color-13;
+$uv-intyg-header-bg: none;
+$uv-intyg-header-color: $wc-color-16;
