--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss
@@ -16,7 +16,7 @@ uv-wc-fraga {
   }
 
   .uv-wc-fraga-komplettering {
-    border: 3px solid #FFC822;
+    border: 3px solid $wc-color-12;
     border-radius: 4px;
     margin-bottom: 1px;
   }
