--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/fmb/_fmb.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/fmb/_fmb.scss
@@ -20,15 +20,15 @@
 /* A panel to be used instead of the regular bootstrap panels, panel-default etc.
  * Specifically targeting the FMB-accordion
  */
-$fmb-border-color: #ccc;
-$fmb-panelheading-color: #333333;
-$fmb-panelheading-background-color: #fff;
-$fmb-panelheading-background-hover-color: #E0FFFF;
-$fmb-panelheading-border-color: #ccc;
-$fmb-panelcollapse-border-color: #fff;
-$fmb-panelfooter-color: #999;
-$fmb-diagnosis-color: #000;
-$fmb-glyphicon-hover-color: #808080;
+$fmb-border-color: $wc-color-15;
+$fmb-panelheading-color: $wc-color-08;
+$fmb-panelheading-background-color: $wc-color-00;
+$fmb-panelheading-background-hover-color: $wc-color-03;
+$fmb-panelheading-border-color: $wc-color-15;
+$fmb-panelcollapse-border-color: $wc-color-00;
+$fmb-panelfooter-color: $wc-color-22;
+$fmb-diagnosis-color: $wc-color-07;
+$fmb-glyphicon-hover-color: $wc-color-22;
 
 /* SIT type drafts needs a smaller fmb info panel to avoid overlapping fmb-panels, by wrapping the fmb directive with this class we can override the default heights */
 .sit-fmb-small {
@@ -63,9 +63,9 @@ $fmb-glyphicon-hover-color: #808080;
 }
 
 .btn-default.btn-fmb:hover, .btn-default.btn-fmb:focus {
-  color: #333;
-  background-color: #f5f5f5;
-  border-color: #adadad;
+  color: $wc-color-08;
+  background-color: $wc-color-20;
+  border-color: $wc-color-23;
 }
 
 .fmb {
@@ -113,7 +113,7 @@ $fmb-glyphicon-hover-color: #808080;
 
   &:after {
     border-top: 10px solid transparent;
-    border-right: 10px solid #fff;
+    border-right: 10px solid $wc-color-00;
     border-bottom: 10px solid transparent;
     left: -10px;
     top: 1px;
@@ -133,14 +133,14 @@ $fmb-glyphicon-hover-color: #808080;
     line-height: 1.42857143;
     border: 1px solid transparent;
     border-radius: 4px 4px 0 0;
-    background-color: #e5e5e5;
+    background-color: $wc-color-13;
   }
 
   .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-    color: #555;
+    color: $wc-color-09;
     cursor: default;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    background-color: $wc-color-00;
+    border: 1px solid $wc-color-13;
     border-bottom-color: transparent;
   }
 
@@ -159,7 +159,7 @@ $fmb-glyphicon-hover-color: #808080;
   width: 620px;
   /*overflow: hidden;*/
   z-index: 100;
-  box-shadow: 0px 0px 14px rgba(0, 0, 0, .25);
+  box-shadow: 0px 0px 14px $black_30;
   border-radius: 0 4px 4px 4px;
 
   .panel-body {
@@ -172,7 +172,7 @@ $fmb-glyphicon-hover-color: #808080;
 
   .panel-fmb-info-heading {
     padding: 9px 0 8px 15px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid $wc-color-15;
   }
 
   > .panel-heading {
