--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss
@@ -3,7 +3,7 @@ wc-srs-diagnose-info {
   padding-left: 10px;
 
   h1, h2 {
-    color: #008391;
+    color: $wc-color-16;
     margin: 0;
   }
   h1 {
@@ -35,7 +35,7 @@ wc-srs-diagnose-info {
       &.btn-primary:active:focus {
         border: 2px solid;
         border-radius: 27px;
-        background-color: #00777E;
+        background-color: $wc-color-16;
         padding: 5px 20px;
       }
     }
