DEVENV: Lade till material icons och bröt ut font config till egen scss.
DEVENV: Material-icons.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -60,6 +60,7 @@
   @import 'components/wcSekretessAvliden/wcSekretessAvliden.directive.scss';
   @import 'components/wcTableHead/wcTableHead.directive.scss';
   @import 'components/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
+  @import 'css/_fonts.scss';
   @import 'css/_legacy-to-be-removed.scss';
   @import 'css/_wc-uv-override.scss';
   @import 'fk/arenden/_arende.scss';
