--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcHeader.partial.html
@@ -4,6 +4,12 @@
 <div class="wc-main-menu-wrapper">
   <wc-main-menu></wc-main-menu>
 </div>
+
+<!-- used as target for state /terms that pp must approve -->
+<div ui-view="dialogs"></div>
+
+
+
 <!--
 
 <div class="wc-header">
