--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
@@ -5,14 +5,9 @@ wc-header-help {
   flex: 1 4 auto;
 
 
-  @media (max-width: 991px) {
-    //In compact mode, when only hanburger menu is shown set fixed size and let other take exess space.
-    max-width: 38px;
-  }
-
-
   height: 100%;
   display: flex;
+  justify-content: flex-end;
   //base text color for this component
   color: $wc-color-20;
 
@@ -38,10 +33,23 @@ wc-header-help {
 
     }
 
+    &.create-account-section {
+      flex: 1 5;
+      //but no more than..
+      min-width: 120px;
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 16px;
+
+      .vertical-container {
+        align-items: flex-end;
+      }
+    }
+
     &.hamburger-menu {
       flex: 1;
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       box-shadow: none;
       z-index: 2;
 
