--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUnit/wcHeaderUnit.directive.html
@@ -2,15 +2,18 @@
 
   <i class="header-icon glyphicon glyphicon-list-alt"></i>
 
-   <div class="vertical-container">
+  <div class="vertical-container">
+    <!-- first item in vertical container -->
     <div class="single-text-row-container">
-      <span class="text-nowrap vg-name">{{user.valdVardgivare.namn}}</span>
-      <span class="greedy-flex-shrink truncate-when-needed ve-name" ng-if="showEnhetName()">&nbsp;- {{user.valdVardenhet.namn}}</span>
+      <div class="text-nowrap vg-name">{{user.valdVardgivare.namn}}</div>
+      <div class="truncate-when-needed" ng-if="showEnhetName()">&nbsp;- {{user.valdVardenhet.namn}}</div>
     </div>
+
+    <!-- second item of vertical container -->
     <div class="status-row" id="otherLocations">
 
       <div ng-if="showStatsStatus()" class="truncate-when-needed">
-          <b>{{otherLocationsStatsCount()}}</b> ej hanterade frågor och ej signerade utkast på andra vårdenheter.
+        <b>{{otherLocationsStatsCount()}}</b> ej hanterade frågor och ej signerade utkast på andra vårdenheter.
       </div>
 
       <div ng-if="showInactiveUnitStatus()" class="truncate-when-needed">
@@ -18,12 +21,13 @@
       </div>
 
     </div>
-   </div>
+  </div>
 
 
-
-  <button type="button" id="expand-unitmenu-btn" class="btn btn-link" ng-click="toggleMenu($event)" ng-if="menu.enabled" wc-authority="ATKOMST_ANDRA_ENHETER">
-    <i class="header-chevron glyphicon" ng-class="{'glyphicon-menu-down' :!menu.expanded, 'glyphicon-menu-up': menu.expanded}"></i>
+  <button type="button" id="expand-unitmenu-btn" class="btn btn-link" ng-click="toggleMenu($event)" ng-if="menu.enabled"
+          wc-authority="ATKOMST_ANDRA_ENHETER">
+    <i class="header-chevron glyphicon"
+       ng-class="{'glyphicon-menu-down' :!menu.expanded, 'glyphicon-menu-up': menu.expanded}"></i>
   </button>
 
 
