--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary/wcUtkastErrorSummary.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary/wcUtkastErrorSummary.directive.scss
@@ -3,7 +3,7 @@ wc-utkast-error-summary {
   display: block;
 
   h3 {
-    color: $alert-danger-color;
+    color: $wc-color-01;
   }
 
   .ul__thin-bullet {
