--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
@@ -23,7 +23,7 @@ a {
 }
 
 .disabled {
-  color: $gray;
+  color: $wc-color-09;
   cursor: not-allowed;
 }
 
@@ -64,40 +64,40 @@ a {
 }
 
 .revoked-certificate {
-  color: $color_silver_chalice_approx;
+  color: $wc-color-22;
   .qa-block {
-    background-color: $color_wild_sand_approx;
-    color: $color_silver_chalice_approx;
+    background-color: $wc-color-20;
+    color: $wc-color-22;
   }
   .qa-block-head {
-    background-color: $color_wild_sand_approx;
-    color: $color_silver_chalice_approx;
+    background-color: $wc-color-20;
+    color: $wc-color-22;
   }
   div.infobox {
-    background-color: $mercury;
-    color: $color_silver_chalice_approx;
+    background-color: $wc-color-13;;
+    color: $wc-color-22;
     h3 {
-      background-color: $mercury;
-      color: $color_silver_chalice_approx;
+      background-color: $wc-color-13;;
+      color: $wc-color-22;
     }
     h4 {
-      background-color: $mercury;
-      color: $color_silver_chalice_approx;
+      background-color: $wc-color-13;;
+      color: $wc-color-22;
     }
   }
   .intyg-body .intyg-block .title {
-    color: $color_silver_chalice_approx;
+    color: $wc-color-22;
   }
 
   .intyg-block h4.intyg-field-number {
-    color: $color_silver_chalice_approx;
+    color: $wc-color-22;
   }
   .alert-info {
     display: none;
   }
 
   .intyg-block a {
-    color: $color_silver_chalice_approx;
+    color: $wc-color-22;
   }
 }
 
@@ -183,7 +183,7 @@ label.big-radio-label, label.big-checkbox-label {
 //Larger structures used in multiple places
 .edit-form {
   .alert-danger {
-    border: 1px solid $color_apple_blossom_approx;
+    border: 1px solid $wc-color-04;
   }
   .form-inline input[type=checkbox] {
     margin: -1px 0 0;
@@ -202,10 +202,10 @@ label.big-radio-label, label.big-checkbox-label {
   }
 
   .categorykmplt, .groupkomplettering {
-    border: 2px solid $color_blue_chill_approx;
+    border: 2px solid $wc-color-16;
   }
   .categoryerror, .grouperror {
-    border: 2px solid $color_apple_blossom_approx;
+    border: 2px solid $wc-color-04;
   }
   .grouperror, .groupkomplettering {
     padding: 8px;
@@ -231,12 +231,12 @@ label.big-radio-label, label.big-checkbox-label {
 
   input.fieldkomplettering {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 131, 145, 0.6);
-    border: 1px solid $color_blue_chill_approx;
+    border: 1px solid $wc-color-16;
   }
   .fieldkomplettering {
     input[TYPE='text'], textarea, .ui-select-match {
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 131, 145, 0.6);
-      border: 1px solid $color_blue_chill_approx;
+      border: 1px solid $wc-color-16;
     }
   }
 
@@ -291,7 +291,7 @@ label.big-radio-label, label.big-checkbox-label {
     &.intyg-field-number {
       float: right;
       padding: 0 0 0 10px;
-      color: $color_blue_chill_approx;
+      color: $wc-color-16;
       font-size: 15px;
     }
     &.noH5After {
@@ -304,7 +304,7 @@ label.big-radio-label, label.big-checkbox-label {
     line-height: 17px;
   }
   a {
-    color: $color_blue_chill_approx;
+    color: $wc-color-16;
   }
   .control-label {
     max-width: 600px;
@@ -325,11 +325,11 @@ label.big-radio-label, label.big-checkbox-label {
     margin-left: 0;
   }
   .intyg-field-blank {
-    color: $color_blue_chill_approx;
+    color: $wc-color-16;
   }
   &__heading {
     margin: 0;
-    color: $color_blue_chill_approx;
+    color: $wc-color-16;
     font-size: 16px;
     font-weight: bold;
     padding-bottom: 0px;
@@ -348,19 +348,19 @@ label.big-radio-label, label.big-checkbox-label {
   }
   &__content {
     display: block;
-    background-color: $mercury;
+    background-color: $wc-color-13;;
     border-radius: 4px 4px 4px 4px;
     .divider {
-      border-bottom: 1px solid $color_mountain_mist_approx;
+      border-bottom: 1px solid $wc-color-22;
     }
     &.unfilled {
-      background-color: $white;
-      border: 2px solid $mercury;
+      background-color: $wc-color-00;
+      border: 2px solid $wc-color-13;;
     }
   }
   &__subcontent {
-    border: 1px solid $intyg_medium_grey;
-    background-color: $intyg_light_grey;
+    border: 1px solid $wc-color-15;
+    background-color: $wc-color-20;
     border-radius: 7px 7px 7px 7px;
     margin-bottom: 16px;
     &:last-child {
@@ -369,7 +369,7 @@ label.big-radio-label, label.big-checkbox-label {
     padding: 20px;
   }
   .unfilled {
-    color: $color_suva_gray_approx;
+    color: $wc-color-22;
     border-radius: 4px 4px 4px 4px;
   }
   hr {
