--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.scss
@@ -4,18 +4,18 @@ uv-signed-by {
   margin-top: 20px;
 
   div.infobox {
-    background-color: $color_blue_chill_approx;
+    background-color: $wc-color-16;
     border-radius: 4px 4px 4px 4px;
-    color: $white;
+    color: $wc-color-00;
     padding: 20px;
     h3 {
       font-size: 16px;
       padding: 0;
-      color: $white;
+      color: $wc-color-00;
     }
     h4 {
       padding: 10px 0 5px 0;
-      color: $white;
+      color: $wc-color-00;
       font-size: 14px;
       font-weight: bold;
     }
