--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.scss
@@ -129,7 +129,7 @@ $header-fix-panel-popover-color: $wc-color-08;
     margin-left: 40px;
     max-width: 800px;
     .alert-danger {
-      border: 1px solid $color_apple_blossom_approx;
+      border: 1px solid $wc-color-04;
     }
   }
 }
