--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSingle/wcFieldSingle.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSingle/wcFieldSingle.directive.scss
@@ -1,6 +1,6 @@
 .intyg-block-single__content {
-  background-color: $mercury;
-  border: 1px solid $color_iron_approx;
+  background-color: $wc-color-13;;
+  border: 1px solid $wc-color-13;
   padding: 12px 14px 12px 14px;
   border-radius: 4px 4px 4px 4px;
 }
