INTYG-5096: Lagade bugg som uppstod pga ändrad ordning i scss-reglers inläsning

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
@@ -131,10 +131,18 @@ td .last-validation .validation, .last-validation td .validation {
 
 .radio {
   cursor: pointer;
+  &.disabled {
+    color: $gray;
+    cursor: not-allowed;
+  }
 }
 
 .checkbox {
   cursor: pointer;
+  &.disabled {
+    color: $gray;
+    cursor: not-allowed;
+  }
 }
 
 /*
