INTYG-5096: Fel variabelnamn i scss, ändrat

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_legacy-to-be-removed.scss
@@ -132,7 +132,7 @@ td .last-validation .validation, .last-validation td .validation {
 .radio {
   cursor: pointer;
   &.disabled {
-    color: $gray;
+    color: $wc-color-09;
     cursor: not-allowed;
   }
 }
@@ -140,7 +140,7 @@ td .last-validation .validation, .last-validation td .validation {
 .checkbox {
   cursor: pointer;
   &.disabled {
-    color: $gray;
+    color: $wc-color-09;
     cursor: not-allowed;
   }
 }
