--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2017 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -17,5 +17,18 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#wc-intyg-related-other-intyg-message {
+wc-alert-message {
+
+  .alert {
+    display: inline-block;
+    position: relative;
+    padding: 8px 9px 7px 38px;
+
+    .material-icons {
+      position: absolute;
+      top: 5px;
+      left: 6px;
+    }
+  }
+
 }
