--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -49,6 +49,7 @@
   @import 'components/headers/wcHeader.partial.scss';
   @import 'components/headers/wcHeaderCareUnitDialog.template.scss';
   @import 'components/headers/wcMainMenu/wcMainMenu.directive.scss';
+  @import 'components/wcAlertMessage/wcAlertMessage.directive.scss';
   @import 'components/wcFormLabel/wcFormLabel.scss';
   @import 'components/wcFragaKomplettering/wcFragaKomplettering.directive.scss';
   @import 'components/wcHelpChevron/wcHelpChevron.directive.scss';
